--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-module-decorators": "^1.0.1",
+    "@sabasayer/module.core": "1.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
@@ -20,7 +22,7 @@
     "@vue/cli-service": "~4.5.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~3.9.3",
+    "typescript": "^4.1.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
